--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,10 @@
 
         <base href="/" />
 
-        <meta name="color-scheme" content="light dark" />
-        <meta
-            name="viewport"
-            content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-        />
+        <meta name="color-scheme" content="dark" />
+        <meta name="theme-color" content="#0D3140">
+        <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
+
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
 
