--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
         <meta name="color-scheme" content="dark" />
         <meta name="theme-color" content="#0D3140">
-        <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
+        <meta name='viewport' content='initial-scale=1, viewport-fit=cover, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"'>
 
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
