switch from react-scripts to vite

--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
         <base href="/" />
 
         <meta name="color-scheme" content="dark" />
-        <meta name="theme-color" content="#0D3140">
-        <meta name='viewport' content='initial-scale=1, viewport-fit=cover, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"'>
+        <meta name="theme-color" content="#0D3140" />
+        <meta
+            name="viewport"
+            content='initial-scale=1, viewport-fit=cover, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"'
+        />
 
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
 
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <link rel="manifest" href="/manifest.json" />
 
         <link
             rel="shortcut icon"
             type="image/png"
-            href="%PUBLIC_URL%/assets/icon/favicon.png"
+            href="/assets/icon/favicon.png"
         />
 
         <!-- add to homescreen for ios -->
@@ -33,8 +36,8 @@
             rel="stylesheet"
         />
     </head>
-
     <body>
         <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
