add a meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <title>WorkoutTrack</title>
+        <meta
+            name="description"
+            content="WorkoutTrack is a web app that helps you track your workouts, and macros." />
 
         <base href="/" />
 
